verbotsliste-array.txt
  File "<string>", line 24
    escaped = line.replace('\', '\\').replace("'", "\\'").replace('"', '\\"')
                                                                            ^
SyntaxError: unexpected character after line continuation character
